--- a/CommunityMarket/app/src/main/res/layout/activity_favories.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_favories.xml
@@ -7,11 +7,14 @@
     tools:context=".profile.FavoriesActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar2"
+        android:id="@+id/favorite_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/toolbar_background"
         android:theme="@style/ToolbarThemeTwo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:title="favoris"
         app:titleTextColor="@color/blanc"></android.support.v7.widget.Toolbar>
 
@@ -22,6 +25,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
+        app:layout_constraintTop_toBottomOf="@+id/favorite_toolbar" />
 
 </android.support.constraint.ConstraintLayout>
