--- a/CommunityMarket/app/src/main/res/layout/activity_message.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_message.xml
@@ -45,10 +45,10 @@
 
         <android.support.v7.widget.Toolbar
             android:elevation="5dp"
+            android:theme="@style/ToolbarThemeTwo"
             android:id="@+id/message_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-           android:background="@drawable/toolbar_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
