--- a/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_post_final.xml
@@ -12,7 +12,7 @@
         android:id="@+id/final_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/toolbar_background"
+        android:background="@drawable/gradient_list"
         android:theme="@style/ToolbarThemeTwo"
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/post_info_sur_vente"
