--- a/CommunityMarket/app/src/main/res/layout/activity_chat_message.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_chat_message.xml
@@ -29,7 +29,7 @@
         android:id="@+id/message_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/toolbar_background"
+        android:background="@drawable/gradient_list"
         android:theme="@style/ToolbarThemeTwo"
         app:titleTextColor="@color/blanc"
         app:layout_constraintEnd_toEndOf="parent"
