--- a/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
@@ -129,9 +129,9 @@
                     android:layout_width="@dimen/new_desc_text_width"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="24dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="50dp"
+                    android:layout_marginBottom="32dp"
                     android:fontFamily="@font/righteous"
                     android:lineSpacingExtra="8dp"
                     android:textColor="@color/black"
@@ -141,8 +141,9 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.444"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/supprime_detail_button"
+                    app:layout_constraintTop_toBottomOf="@+id/detail_titre_vente"
                     tools:ignore="MissingConstraints" />
+
 
 
                 <android.support.design.widget.FloatingActionButton
@@ -156,7 +157,20 @@
                     app:layout_constraintTop_toBottomOf="@+id/detail_image_post"
                     app:layout_constraintVertical_bias="0.475"
                     app:srcCompat="@drawable/ic_add_coment" />
-
+                <TextView
+                    android:id="@+id/detail_titre_vente"
+                    android:layout_width="@dimen/text_choice_widht"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:fontFamily="@font/righteous"
+                    android:textAlignment="center"
+                    android:textColor="#ff17"
+                    android:textSize="@dimen/pub_title_text_size"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/voir_les_commentaire_btn" />
             </android.support.constraint.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
