--- a/CommunityMarket/app/src/main/res/layout/activity_message.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_message.xml
@@ -49,6 +49,7 @@
             android:id="@+id/message_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/gradient_list"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
