--- a/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_parametre_porfil.xml
@@ -14,7 +14,7 @@
         android:id="@+id/toolbar_parametre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/toolbar_background"
+        android:background="@drawable/gradient_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
