--- a/CommunityMarket/app/src/main/res/layout/activity_post.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_post.xml
@@ -12,7 +12,7 @@
         android:id="@+id/post_cat_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/toolbar_background"
+        android:background="@drawable/gradient_list"
         android:theme="@style/ToolbarThemeTwo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
