--- a/CommunityMarket/app/src/main/res/layout/activity_publicity.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_publicity.xml
@@ -11,7 +11,7 @@
         android:id="@+id/entreprise_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/toolbar_background"
+        android:background="@drawable/gradient_list"
         app:titleTextColor="@color/blanc"
         android:theme="@style/ToolbarThemeTwo">
 
@@ -138,13 +138,14 @@
 
                 <TextView
                     android:id="@+id/publicity_entreprise_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="@dimen/text_choice_widht"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="50dp"
                     android:layout_marginEnd="8dp"
                     android:fontFamily="@font/righteous"
                     android:text="Lorem ipsum"
+                    android:textAlignment="center"
                     android:textColor="@color/blanc"
                     android:textSize="@dimen/pub_title_text_size"
                     android:textStyle="bold"
