--- a/CommunityMarket/app/src/main/res/layout/activity_sell_user.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_sell_user.xml
@@ -30,7 +30,7 @@
         android:id="@+id/vendeur_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/toolbar_background"
+        android:background="@drawable/gradient_list"
         android:elevation="10dp"
         android:theme="@style/ToolbarThemeTwo"
         app:layout_constraintEnd_toEndOf="parent"
