--- a/CommunityMarket/app/src/main/res/layout/activity_test.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_test.xml
@@ -159,7 +159,7 @@
                     android:layout_width="@dimen/new_desc_text_width"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="24dp"
                     android:layout_marginEnd="8dp"
                     android:fontFamily="@font/righteous"
                     android:lineSpacingExtra="8dp"
@@ -169,7 +169,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.444"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/supprime_detail_button"
+                    app:layout_constraintTop_toBottomOf="@+id/detail_titre_vente"
                     tools:ignore="MissingConstraints" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
@@ -241,6 +241,21 @@
                     app:layout_constraintTop_toBottomOf="@+id/detail_image_post"
                     app:layout_constraintVertical_bias="0.475"
                     app:srcCompat="@drawable/ic_add_coment" />
+
+                <TextView
+                    android:id="@+id/detail_titre_vente"
+                    android:layout_width="@dimen/text_choice_widht"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:fontFamily="@font/righteous"
+                    android:textAlignment="center"
+                    android:textColor="#ff17"
+                    android:textSize="@dimen/pub_title_text_size"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/voir_les_commentaire_btn" />
 
             </android.support.constraint.ConstraintLayout>
         </LinearLayout>
