--- a/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/app_bar_accueil.xml
@@ -31,6 +31,7 @@
             android:elevation="8dp"
             android:fontFamily="@font/righteous"
             app:tabIndicatorColor="@color/blanc"
+            android:theme="@style/AppTheme.AppBarOverlay_two"
             android:background="@drawable/gradient_list"
             app:tabMode="scrollable">
 
