--- a/CommunityMarket/app/src/main/res/layout/fragment_home.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_home.xml
@@ -131,7 +131,7 @@
 
 
                 <TextView
-                    android:id="@+id/actuellement_text"
+                    android:id="@+id/textView16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
