--- a/CommunityMarket/app/src/main/res/layout/activity_choice_search.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice_search.xml
@@ -132,8 +132,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:background="@drawable/gradient_list"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
+        android:theme="@style/ToolbarThemeTwo"
+        app:titleTextColor="@color/blanc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
