--- a/CommunityMarket/app/src/main/res/layout/left_item_chat.xml
+++ b/CommunityMarket/app/src/main/res/layout/left_item_chat.xml
@@ -39,6 +39,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/current_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/righteous"
+            android:textColor="@color/blanc"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/show_message"
+            app:layout_constraintStart_toStartOf="@+id/show_message"
+            app:layout_constraintTop_toBottomOf="@+id/show_message" />
     </android.support.constraint.ConstraintLayout>
 
 
