--- a/CommunityMarket/app/src/main/res/layout/right_item_chat.xml
+++ b/CommunityMarket/app/src/main/res/layout/right_item_chat.xml
@@ -41,6 +41,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
+        <TextView
+            android:id="@+id/current_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/righteous"
+            android:textColor="@color/blanc"
+            app:layout_constraintEnd_toEndOf="@+id/show_message"
+            app:layout_constraintStart_toStartOf="@+id/show_message"
+            app:layout_constraintTop_toBottomOf="@+id/show_message" />
 
 
     </android.support.constraint.ConstraintLayout>
