--- a/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
@@ -45,7 +45,7 @@
                 <ImageView
                     android:id="@+id/imageView9"
                     android:layout_width="0dp"
-                    android:layout_height="70dp"
+                    android:layout_height="80dp"
                     app:layout_constraintBottom_toBottomOf="@+id/detail_image_post"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -81,14 +81,15 @@
 
                 <TextView
                     android:id="@+id/detail_prix_produit"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="8dp"
-                    android:fontFamily="@font/righteous"
-                    android:text="1000 fcfa "
                     android:background="@drawable/background_detail_activity"
+                    android:fontFamily="@font/righteous"
                     android:padding="2dp"
+                    android:text="1000 fcfa "
+                    android:textAlignment="center"
                     android:textColor="@color/blanc"
                     android:textSize="@dimen/detail_text_size_two"
                     android:textStyle="bold"
@@ -104,18 +105,22 @@
                     android:text="yannick Houdini"
                     android:textColor="@color/blanc"
                     android:textSize="@dimen/detail_text_size_two"
+                    android:theme="@style/edit_theme"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/detail_prix_produit" />
+
                 <ImageView
                     android:id="@+id/detail_image_du_profil"
                     android:layout_width="@dimen/detail_image_height_width"
                     android:layout_height="@dimen/detail_image_height_width"
-                    android:theme="@style/edit_theme"
                     android:layout_marginStart="@dimen/profil_detail_start_text"
                     android:layout_marginTop="@dimen/detail_image_top"
+                    android:layout_marginBottom="90dp"
+                    app:layout_constraintBottom_toTopOf="@+id/voir_les_commentaire_btn"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/imageView5"
                     app:srcCompat="@drawable/boy" />
+
 
                 <ProgressBar
                     android:id="@+id/detail_progress"
