--- a/CommunityMarket/app/src/main/res/layout/fragment_home.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_home.xml
@@ -137,6 +137,8 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
+                    android:ellipsize="end"
+                    android:lines="1"
                     android:fontFamily="@font/righteous"
                     android:text="@string/actu"
                     android:textColor="@color/blanc"
