--- a/CommunityMarket/app/src/main/res/layout/left_item_chat.xml
+++ b/CommunityMarket/app/src/main/res/layout/left_item_chat.xml
@@ -44,6 +44,7 @@
             android:id="@+id/current_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:fontFamily="@font/righteous"
             android:textColor="@color/blanc"
