--- a/CommunityMarket/app/src/main/res/layout/item_user_layout.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_user_layout.xml
@@ -6,16 +6,18 @@
     android:layout_height="wrap_content"
     android:background="@color/black"
     android:id="@+id/user_container"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     >
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/parametre_image"
-        android:layout_width="@dimen/new_profil_image_dimen"
-        android:layout_height="@dimen/new_profil_image_dimen"
-        android:layout_marginStart="8dp"
+        android:layout_width="@dimen/parametre_actibity_image_w_n_h"
+        android:layout_height="@dimen/parametre_actibity_image_w_n_h"
+        android:layout_marginStart="@dimen/search_profil_start"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/boy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +39,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/parametre_image"
-        app:layout_constraintTop_toTopOf="@+id/parametre_image"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -61,7 +63,6 @@
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
