--- a/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
@@ -110,6 +110,16 @@
                     app:layout_constraintTop_toTopOf="@+id/imageView5"
                     app:srcCompat="@drawable/boy" />
 
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/detail_image_post_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:titleTextColor="@color/blanc"
+                    android:theme="@style/ToolbarTheme"
+                    android:background="@android:color/transparent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
                 <View
                     android:id="@+id/view"
                     android:layout_width="0dp"
