--- a/CommunityMarket/app/src/main/res/values-hdpi/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-hdpi/dimens.xml
@@ -68,7 +68,7 @@
     <dimen name="login_logo_margintop">40dp</dimen>
     <dimen name="login_padding_edit_text">15dp</dimen>
     <!-- parametre activty post-->
-    <dimen name="parametre_actibity_image_w_n_h">100dp</dimen>
+    <dimen name="parametre_actibity_image_w_n_h">70dp</dimen>
     <dimen name="parametre_padding_edit_text">8dp</dimen>
     <dimen name="parametre_image_button">40dp</dimen>
     <!-- post activty final -->
@@ -248,6 +248,7 @@
     <dimen name="principal_temps_top_two">8dp</dimen>
     <dimen name="login_text_size">40sp</dimen>
     <dimen name="login_start_end">70dp</dimen>
+    <dimen name="search_profil_start">8dp</dimen>
 
 
 
