--- a/CommunityMarket/app/src/main/res/values-large/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-large/dimens.xml
@@ -249,5 +249,6 @@
     <dimen name="principal_temps_top_two">8dp</dimen>
     <dimen name="login_text_size">70sp</dimen>
     <dimen name="login_start_end">150dp</dimen>
+    <dimen name="search_profil_start">80dp</dimen>
 
 </resources>
