--- a/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
+++ b/CommunityMarket/app/src/main/res/values-xlarge/dimens.xml
@@ -259,4 +259,6 @@
     <dimen name="principal_temps_top_two">8dp</dimen>
     <dimen name="login_text_size">80sp</dimen>
     <dimen name="login_start_end">250dp</dimen>
+    <dimen name="search_profil_start">160dp</dimen>
+
 </resources>
