--- a/CommunityMarket/app/src/main/res/layout/activity_message.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_message.xml
@@ -78,9 +78,9 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
-                    android:fontFamily="@font/nunito_bold"
+                    android:fontFamily="@font/righteous"
                     android:textColor="@color/blanc"
-                    android:textSize="18sp"
+                    android:textSize="@dimen/new_detail_desc_text_size"
                     android:textStyle="bold"
                     android:theme="@style/ToolbarThemeTwo"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -153,6 +153,7 @@
         android:id="@+id/message_recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/user_message_to_send"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -190,9 +191,10 @@
                 android:textColor="@color/blanc"
                 android:textStyle="bold"
                 android:lines="1"
-                android:textSize="@dimen/detail_text_size"
+                android:textSize="@dimen/new_detail_desc_text_size"
                 android:ellipsize="end"
-                android:fontFamily="@font/nunito_bold"
+                android:fontFamily="@font/righteous"
+                android:text="open market"
                 app:layout_constraintStart_toEndOf="@+id/image_de_discutions"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -202,10 +204,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/pub_button_start_end"
                 android:layout_marginTop="@dimen/message_activity_prix_top"
-                android:textColor="@color/bg_screen1"
-                android:textStyle="bold"
-                android:textSize="@dimen/detail_text_size"
+                android:layout_marginBottom="8dp"
                 android:fontFamily="@font/nunito_bold"
+                android:text="lolipop"
+                android:textColor="@color/bg_screen1"
+                android:textSize="@dimen/new_detail_desc_text_size"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/image_de_discutions"
                 app:layout_constraintTop_toBottomOf="@+id/titre_produit" />
 
