--- a/CommunityMarket/app/src/main/res/layout/item_contact_chat.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_contact_chat.xml
@@ -116,6 +116,20 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/chat_user_name" />
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/new_message_image"
+                android:layout_width="@dimen/commentaire_circle_widht_height"
+                android:layout_height="@dimen/commentaire_circle_widht_height"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:src="@mipmap/ic_launcher"
+                android:visibility="invisible"
+                app:civ_border_color="#FF41F20B"
+                app:civ_border_width="10dp"
+                app:layout_constraintBottom_toBottomOf="@+id/chat_last_message"
+                app:layout_constraintStart_toEndOf="@+id/chat_last_message"
+                app:layout_constraintTop_toTopOf="@+id/chat_last_message"
+                app:layout_constraintVertical_bias="0.17000002" />
             <TextView
                 android:id="@+id/lu_non"
                 android:layout_width="wrap_content"
