--- a/CommunityMarket/app/src/main/res/layout/item_contact_chat.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_contact_chat.xml
@@ -105,8 +105,8 @@
                 android:id="@+id/chat_temps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/nunito_bold"
                 android:layout_marginEnd="@dimen/commentaire_text_temps_end"
+                android:fontFamily="@font/righteous"
                 android:text="17 mai 2019"
                 android:textColor="@color/blanc"
                 android:textSize="@dimen/commentaire_temps"
@@ -120,16 +120,15 @@
                 android:id="@+id/new_message_image"
                 android:layout_width="@dimen/commentaire_circle_widht_height"
                 android:layout_height="@dimen/commentaire_circle_widht_height"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
                 android:src="@mipmap/ic_launcher"
                 android:visibility="invisible"
                 app:civ_border_color="#FF41F20B"
                 app:civ_border_width="10dp"
-                app:layout_constraintBottom_toBottomOf="@+id/chat_last_message"
-                app:layout_constraintStart_toEndOf="@+id/chat_last_message"
-                app:layout_constraintTop_toTopOf="@+id/chat_last_message"
-                app:layout_constraintVertical_bias="0.17000002" />
+                app:layout_constraintEnd_toEndOf="@+id/chat_temps"
+                app:layout_constraintHorizontal_bias="0.97"
+                app:layout_constraintStart_toStartOf="@+id/chat_temps"
+                app:layout_constraintTop_toBottomOf="@+id/chat_temps" />
             <TextView
                 android:id="@+id/lu_non"
                 android:layout_width="wrap_content"
