--- a/CommunityMarket/app/src/main/res/layout/activity_favories.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_favories.xml
@@ -4,7 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profile.FavoriesActivity">
+    tools:context=".profile.FavoriesActivity"
+    android:background="@color/black">
+
+    <TextView
+        android:id="@+id/text_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/righteous"
+        android:text="empty "
+        android:textColor="@color/blanc"
+        android:textSize="24sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/favorite_recycler" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/favorite_toolbar"
