--- a/CommunityMarket/app/src/main/res/layout/load_pop_pup.xml
+++ b/CommunityMarket/app/src/main/res/layout/load_pop_pup.xml
@@ -2,13 +2,17 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="300dp"
-    android:layout_height="50dp"
+    android:layout_height="300dp"
     android:layout_gravity="center">
 
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
-        android:layout_height="50dp"
-        app:cardCornerRadius="5dp">
+        android:layout_height="300dp"
+        app:cardCornerRadius="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
