--- a/CommunityMarket/app/src/main/res/layout/fragment_jupes.xml
+++ b/CommunityMarket/app/src/main/res/layout/fragment_jupes.xml
@@ -81,5 +81,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pubImag_jupe" />
+        app:layout_constraintTop_toBottomOf="@+id/viewFlippertwo" />
 </android.support.constraint.ConstraintLayout>
