--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -27,7 +27,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.5"
+        android:alpha="0.3"
         android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,6 +37,7 @@
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="Orientation">
         <ImageView
+            android:src="@drawable/acceuil"
             android:id="@+id/imageslide"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
